11-argocd/deployment/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datastore-frontend-svc
  namespace: frontend
spec:
  ports:
  - port: 8081
    targetPort: 8501
  selector:
    type: frontend
